--- a/app/(pages)/(index-page)/_components/Polaroids/Polaroids.module.scss
+++ b/app/(pages)/(index-page)/_components/Polaroids/Polaroids.module.scss
@@ -34,6 +34,7 @@
       display: flex; 
       margin-top: -10%;
       align-items: start;
+      width: 90%;
         &_img2{
           // border: 1px solid black;
           animation: shake 5s cubic-bezier(.36,.9,.19,.97) both;
